# embedded_common

./: .gitignore  CMakeLists.txt  README.md  install_local_dependencies.sh
attributes/: CMakeLists.txt
attributes/include/: attribute.h  attribute_host.h
attributes/src/: attribute.cpp  attribute_host.cpp
common/: CMakeLists.txt
common/include/: arg_helper.h  argument_helper.h  attribute_datatype_enum.h  time_helper.h
common/src/: arg_helper.cpp  argument_helper.cpp  time_helper.cpp
connection/: CMakeLists.txt
connection/include/: connection_azure_routes.h  connection_base.h  connection_factory.h  connection_i.h  connection_mqtt.h  message_queue.h
connection/src/: connection_azure_routes.cpp  connection_base.cpp  connection_factory.cpp  connection_mqtt.cpp  message_queue.cpp
data_module_base/: CMakeLists.txt
data_module_base/include/: config_handler.h  data_module_base.h  data_module_base_config.h  data_module_i.h
data_module_base/src/: config_handler.cpp  data_module_base.cpp  data_module_base_config.cpp
mosquitto_client/: CMakeLists.txt
mosquitto_client/include/: mosquitto_client.h
mosquitto_client/src/: mosquitto_client.cpp
parser/include/: parser_i.h
